--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -7,5 +7,6 @@
     <input type="text" id="ulast" name="last" />
     <label for="ufirst">FirstName: </label>
     <input type="text" id="ufirst" name="first" />
+    <canvas width="150px" height="300px" id="signBox"></canvas>
     <button type="submit">Submit</button>
 </form>
