--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,5 +11,7 @@
 
         {{{body}}}
         <footer>© Vasenina 2021</footer>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
