--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -3,5 +3,6 @@
 
 <a href="/signers">See all {{signersCount}} signers</a>
 <div>
-    {{signature}}
+    here is a signature
+    <img src={{signature}} />
 </div>
