--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -1,5 +1,5 @@
 <h1>Great Petition ever</h1>
-<form method="POST">
+<form method="POST" id="petitionform">
     <h1>Sign our Petition</h1>
     <p>We want to create smth interesting</p>
     {{#if signedError}}<p>Your input data is wrong</p>{{/if}}
@@ -8,5 +8,6 @@
     <label for="ufirst">FirstName: </label>
     <input type="text" id="ufirst" name="first" />
     <canvas width="150px" height="300px" id="signBox"></canvas>
+    <input type="hidden" id="signInput" name="signature" value="" />
     <button type="submit">Submit</button>
 </form>
