--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,8 +8,10 @@
     </head>
     <body>
         <header><h1>Petition</h1></header>
+        <main>
 
-        {{{body}}}
+            {{{body}}}
+        </main>
         <footer>© Vasenina 2021</footer>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="script.js"></script>
