auth logic added

--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -1,5 +1,5 @@
 <ul>
     {{#each signers}}
-        <li> {{last}} {{first}}</li>
+        <li> {{lastname}} {{firstname}}</li>
     {{/each}}
 </ul>
