profile page added

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,5 +1,5 @@
 <form method="POST" id="registerform">
-    <h1>Register here and sign the petition</h1>
+    <h1>Register here and sign to be happy</h1>
 
     <label for="ulast">LastName: </label>
     <input type="text" id="ulast" name="last" />
