--- a/public/styles.css
+++ b/public/styles.css
@@ -1,13 +1,16 @@
 :root {
-    --bg-color: #ffd8cb;
-    --header-font-color: #c42941;
-    --text-color: #740012;
+    --bg-color: #fec41b;
+    --red: #bf3124;
+    --header-font-color: #f21d81;
+    --text-color: black;
+    --action-color: #05f2f2;
     --green: #1e915a;
+    --lila: #e8d0e8;
 }
 
 * {
     box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Fuzzy Bubbles", cursive;
     color: var(--text-color);
 }
 
@@ -15,6 +18,13 @@ body {
     background-color: var(--bg-color);
     display: grid;
     grid-template-rows: 50px 1fr 20px;
+}
+p {
+    font-family: "Fuzzy Bubbles", cursive;
+}
+
+h1 {
+    color: var(--header-font-color);
 }
 
 #signBox {
@@ -36,14 +46,24 @@ canvas {
 }
 
 button {
-    background-color: var(--text-color);
-    color: white;
-    border: none;
+    background-color: transparent;
+    color: var(--text-color);
+    border: 4px solid var(--action-color);
     border-radius: 10px;
-    width: 150px;
-    height: 60px;
+    width: 200px;
+    height: 50px;
     font-size: large;
+    margin-top: 15px;
+}
+button:hover {
+    cursor: pointer;
+    background-color: var(--action-color);
 }
 input {
     border-radius: 10px;
+    padding: 10px 0;
+    font-size: 16;
+}
+li {
+    font-family: "Fuzzy Bubbles", cursive;
 }
