--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,11 +3,17 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="/styles.css" />
-        <title>Petition</title>
+        <title>Happiness</title>
     </head>
     <body>
-        <header><h1>Petition</h1></header>
+        <header><h1>Happiness is ...</h1></header>
         <main>
 
             {{{body}}}
