--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,9 +11,12 @@
         />
         <link rel="stylesheet" href="/styles.css" />
         <title>Happiness</title>
+
     </head>
     <body>
-        <header><h1>Happiness is ...</h1></header>
+        <header><h1>Happy people</h1>
+            <a href="./thanks"><p class="pink">{{first}} {{last}}</p></a>
+        </header>
         <main>
 
             {{{body}}}
