--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -1,8 +1,7 @@
-<h2>Thank you!</h2>
-<p>Our world will be better</p>
+<h2>Congratulations!</h2>
+<p>There is one more happier person in the world 😀</p>
 
-<a href="/signers">See all {{signersCount}} signers</a>
 <div>
-    here is a signature
     <img src={{signature}} />
 </div>
+<a href="/signers">See all {{signersCount}} happy people</a>
