--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Fuzzy+Bubbles&display=swap"
             rel="stylesheet"
         />
         <link rel="stylesheet" href="/styles.css" />
@@ -14,8 +14,8 @@
 
     </head>
     <body>
-        <header><h1>Happy people</h1>
-            <a href="./thanks"><p class="pink">{{first}} {{last}}</p></a>
+        <header><h1>HAPPY PEOPLE</h1>
+            <a href="/thanks"><p class="pink">{{first}} {{last}}</p></a>
         </header>
         <main>
 
