--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -1,8 +1,8 @@
-<h1>Great Petition ever</h1>
+<h1>Do you want to be happy?</h1>
 <form method="POST" id="petitionform">
-    <h1>Sign our Petition</h1>
     <h2>Dear, {{last}} {{first}}</h2>
-    <p>We want to create smth interesting</p>
+    <p>Sign here and be the happiest in this world. Add your name to the list of
+        happiest people!🎈</p>
     {{#if signedError}}<p>Your input data is wrong</p>{{/if}}
 
     <canvas width="400px" height="150px" id="signBox"></canvas>
