--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -2,11 +2,11 @@
     <h1>Register here and sign to be happy</h1>
 
     <label for="ulast">LastName: </label>
-    <input type="text" id="ulast" name="last" />
+    <input type="text" id="ulast" name="last" required />
     <label for="ufirst">FirstName: </label>
-    <input type="text" id="ufirst" name="first" />
+    <input type="text" id="ufirst" name="first" required />
     <label for="uemail">Email: </label>
-    <input type="text" id="uemail" name="email" required />
+    <input type="email" id="uemail" name="email" required />
     <label for="upassword">Password: </label>
     <input type="password" id="upassword" name="password" required />
     <button type="submit">Register</button>
