--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <form method="POST" id="registerform">
     <h1>Log in here</h1>
     <label for="uemail">Email: </label>
-    <input type="text" id="uemail" name="email" required />
+    <input type="email" id="uemail" name="email" required />
     <label for="upassword">Password: </label>
     <input type="password" id="upassword" name="password" required />
     <button type="submit">Log in</button>
