--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 <form method="POST" id="registerform">
-    <h1>Log in here</h1>
+    <h2>Log in and be happy</h2>
     <label for="uemail">Email: </label>
     <input type="email" id="uemail" name="email" required />
     <label for="upassword">Password: </label>
