--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,6 +1,7 @@
-<form method="POST" id="registerform">
-    <h1>Register here and sign to be happy</h1>
+<h2>Register here and join happy people</h2>
+<p>We are here to be happy!😁</p>
 
+<form method="POST" id="registerform">
     <label for="ulast">LastName: </label>
     <input type="text" id="ulast" name="last" required />
     <label for="ufirst">FirstName: </label>
