--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,8 +14,8 @@
 
     </head>
     <body>
-        <header><h1>HAPPY PEOPLE</h1>
-            <a href="/thanks"><p class="pink">{{first}} {{last}}</p></a>
+        <header><h1 class="logo">HAPPY PEOPLE</h1>
+            <a href="/thanks" class="pink">{{first}} {{last}}</a>
         </header>
         <main>
 
