--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,6 +1,12 @@
 <h2>Register here and join happy people</h2>
 <p>We are here to be happy!😁</p>
+{{#if err}}
 
+    <p class="error">Something is wrong</p>
+    {{#if email}}
+        <p class="error">Your email is already exists.
+            <a href="/login">Log in here</a></p>{{/if}}
+{{/if}}
 <form method="POST" id="registerform">
     <label for="ulast">LastName: </label>
     <input type="text" id="ulast" name="last" required />
