--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -1,5 +1,5 @@
 <h2>Congratulations!</h2>
-<p>There is one more happier person in the world 😀</p>
+<p>There is one more happier person in the world 🤩"</p>
 
 <div>
     <img src={{signature}} />
@@ -14,9 +14,4 @@
 <form method="POST" action="/delete-signature" class="links">
     <a href="#" onclick="this.parentNode.submit();">
         Delete your signature</a>
-</form>
-
-<form method="POST" action="/delete-profile" class="links">
-    <a href="#" onclick="this.parentNode.submit();">
-        Delete your profile</a>
 </form>
