--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,8 +14,13 @@
 
     </head>
     <body>
-        <header><a href="/thanks"><h1 class="logo">HAPPY PEOPLE</h1></a>
-            <a href="/profile/edit" class="pink">{{first}} {{last}}</a>
+        <header><a href="/thanks" class="logo pink">HAPPY PEOPLE</a>
+            <div>
+                <a href="/profile/edit" class="pink">{{first}} {{last}}</a>
+
+                <!--<img src="../../public/logout.svg" alt="logout" />-->
+
+            </div>
         </header>
         <main>
 
