--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,10 @@
+<h2>Log in and be happy</h2>
+{{#if error}}
+
+    <p class="error">Email or password is wrong</p>
+
+{{/if}}
 <form method="POST" id="registerform">
-    <h2>Log in and be happy</h2>
     <label for="uemail">Email: </label>
     <input type="email" id="uemail" name="email" required />
     <label for="upassword">Password: </label>
