--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -1,5 +1,5 @@
 <h2>Congratulations!</h2>
-<p>There is one more happier person in the world 🤩"</p>
+<p>There is one more happier person in the world ❤️</p>
 
 <div>
     <img src={{signature}} />
