--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <h2>Log in and be happy</h2>
 {{#if error}}
 
-    <p class="error">Email or password is wrong</p>
+    <p class="error">❗ Email or password is wrong</p>
 
 {{/if}}
 <form method="POST" id="registerform">
