--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -2,7 +2,7 @@
 <p>We are here to be happy!😁</p>
 {{#if error}}
 
-    <p class="error">Something is wrong</p>
+    <p class="error">❗ Something is wrong</p>
     {{#if error.email}}
         <p class="error">Your email is already exists.
             <a href="/login">Log in here</a></p>{{/if}}
