--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -2,7 +2,7 @@
 <p>There is one more happier person in the world ❤️</p>
 
 <div>
-    <img src={{signature}} />
+    <img src={{signature}} alt="picture with signature" />
 </div>
 <div class="links">
     <a href="/signers" class="links">See all {{signersCount}} happy people</a>
